k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timetracker-svc
  namespace: timetracker
spec:
  selector:
    app: timetracker
  ports:
    - port: 80
      targetPort: 3000
